--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -10,14 +10,24 @@
 .navbar {
     width: 100%;
     padding: 10px;
+    padding-bottom: 0px;
     position: fixed;
     top: 0;
     transition: top 0.6s;
     z-index: 99;
-    background: red;
+    /* background: var(--dark-blue); */
+    background: whitesmoke;
   }
   
   .navbar-hidden {
     top: -50px;
     background: green;
+  }
+
+  .nav-flex {
+    display: flex;
+    justify-content: space-between;
+  }
+  .svg-container {
+    height: 42px;
   }
