--- a/src/pages/app/App.css
+++ b/src/pages/app/App.css
@@ -56,15 +56,18 @@
   font-family: var(--kongtext);
   font-size: 2.5rem;
   margin-block-start: 0.5rem;
-  margin-block-end: 1rem;
+  /* margin-block-end: 1rem; */
+  margin-block-end: 0.5rem;
 }
 .under-my-name {
-  margin-block-start: 1rem;
+  /* margin-block-start: 1rem; */
+  margin-block-start: 0.5rem;
   /* margin-left: 10px; */
-  margin-block-end: 1.5rem;
-  /* margin-block-end: 4rem; */
-  font-family: var(--kongtext);
-  font-size: 1rem;
+  /* margin-block-end: 1.5rem; */
+  margin-block-end: 2.5rem;
+  /* font-family: var(--kongtext); */
+  /* font-size: 1rem; */
+  font-size: 1.7rem;
   /* color: var(--grayish); */
   color: var(--dark-blue);
   /* overflow: hidden;
