--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -30,4 +30,20 @@
   }
   .svg-container {
     height: 42px;
+    width: 42px;
+  }
+
+  .svg-container:hover #svg-border {
+    animation: rotate-90-cw 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    transform-origin: center;
+    transform-box: fill-box;
+  }
+
+  @keyframes rotate-90-cw {
+    0% {
+      transform: rotate(0);
+    }
+    100% {
+      transform: rotate(90deg);
+    }
   }
