--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -9,28 +9,34 @@
 
 .navbar {
     width: 100%;
-    padding: 10px;
-    padding-bottom: 0px;
     position: fixed;
     top: 0;
     transition: top 0.6s;
     z-index: 99;
     /* background: var(--dark-blue); */
-    background: whitesmoke;
+    background: transparent;
   }
   
   .navbar-hidden {
-    top: -50px;
-    background: green;
+    top: -55px;
+    /* background: green; */
   }
 
   .nav-flex {
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 0px;
     display: flex;
     justify-content: space-between;
   }
   .svg-container {
     height: 42px;
     width: 42px;
+    cursor: pointer;
+    /* background-color: white;
+    border-radius: 9px;
+    border-width: -5px; */
   }
 
   .svg-container:hover #svg-border {
@@ -47,3 +53,90 @@
       transform: rotate(90deg);
     }
   }
+
+/* --------------------------------- */
+/* the hamburger anumations */
+/* --------------------------------- */
+
+#nav-icon4 {
+  margin-top: 2px;
+  width: 42px;
+  height: 42px;
+  position: relative;
+  /* margin: 50px auto; */
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+
+#nav-icon4 span {
+  display: block;
+  position: absolute;
+  height: 7px;
+  width: 100%;
+  background: var(--dark-blue);
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+#nav-icon4 span:nth-child(1) {
+  top: 0px;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center;
+}
+
+#nav-icon4 span:nth-child(2) {
+  top: 14px;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center;
+}
+
+#nav-icon4 span:nth-child(3) {
+  top: 28px;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center;
+}
+
+#nav-icon4:hover span:nth-child(1) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  /* top: -3px; */
+  /* left: 16px; */
+}
+
+#nav-icon4:hover span:nth-child(2) {
+  width: 0%;
+  opacity: 0;
+}
+
+#nav-icon4:hover span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  /* top: 39px;
+  left: 8px; */
+}
