--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -15,10 +15,12 @@
     z-index: 99;
     /* background: var(--dark-blue); */
     background: transparent;
+    background: white;
+    border-radius: 9px;
   }
   
   .navbar-hidden {
-    top: -55px;
+    top: -63px;
     /* background: green; */
   }
 
@@ -26,7 +28,7 @@
     padding-top: 10px;
     padding-left: 10px;
     padding-right: 10px;
-    padding-bottom: 0px;
+    padding-bottom: 4px;
     display: flex;
     justify-content: space-between;
   }
@@ -35,8 +37,7 @@
     width: 42px;
     cursor: pointer;
     /* background-color: white;
-    border-radius: 9px;
-    border-width: -5px; */
+    border-radius: 9px; */
   }
 
   .svg-container:hover #svg-border {
