--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -14,9 +14,10 @@
     transition: top 0.6s;
     z-index: 99;
     /* background: var(--dark-blue); */
-    background: transparent;
-    background: white;
-    border-radius: 9px;
+    /* background: transparent; */
+    background: var(--whiteish);
+    border-radius: 0px 0px 10px 10px;
+    /* box-shadow: 0 4px 3px -3px black; */
   }
   
   .navbar-hidden {
