--- a/src/pages/app/App.css
+++ b/src/pages/app/App.css
@@ -48,12 +48,14 @@
   margin-block-start: 3.5rem;
   margin-block-end: 0.5rem;
   font-size: 1rem;
-  color: var(--dark-blue);
+  /* color: var(--dark-blue); */
+  color: var(--very-blue);
 }
 
 .my-name {
   /* margin-left: 0.4rem; */
   font-family: var(--kongtext);
+  color: var(--dark-blue);
   font-size: 2.5rem;
   margin-block-start: 0.5rem;
   /* margin-block-end: 1rem; */
@@ -69,7 +71,8 @@
   /* font-size: 1rem; */
   font-size: 1.7rem;
   /* color: var(--grayish); */
-  color: var(--dark-blue);
+  /* color: var(--dark-blue); */
+  color: var(--very-blue);
   /* overflow: hidden;
   white-space: nowrap;
   border-right: 10px solid var(--grayish);
@@ -84,16 +87,19 @@
 
 
 h3 {
-  color: var(--dark-blue);
+  /* color: var(--dark-blue); */
+  color: var(--very-blue);
   font-size: 1.7rem;
 }
 b {
-  color: var(--dark-blue);
+  /* color: var(--dark-blue); */
+  color: var(--very-blue);
 }
 
 .MuiButton-outlined {
-  color: var(--dark-blue);
-  border: 1px solid var(--dark-blue);
+  /* color: var(--dark-blue); */
+  color: var(--very-blue);
+  /* border: 1px solid var(--dark-blue); */
 }
 /* 
 @keyframes type {
