--- a/src/pages/app/App.css
+++ b/src/pages/app/App.css
@@ -40,7 +40,7 @@
 
 .padded-section {
   /* 50 vertically 25 horizontally */
-  padding: 50px 25px;
+  padding: var(--global-padding);
 }
 
 .hello-there {
