--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@
   --light-blue: #dbe2ef;
   --very-blue: #3f72af;
   --dark-blue: #112d4e;
+  --grayish: #707070;
+  --almost-black: #242424;
+  --global-padding: 50px 25px;
 }
 
 body {
@@ -30,4 +33,24 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/* scrollbar width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/*scrollbar Track */
+::-webkit-scrollbar-track {
+  background: var(--light-blue);
+}
+
+/*scrollbar Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--dark-blue)
+}
+
+/*scrollbar Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--very-blue);
 }
