--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,8 @@
   --grayish: #707070;
   --almost-black: #242424;
   --global-padding: 50px 25px;
+  --vertical-padding: 50px 0px;
+  --horizontal-padding: 0px 25px;
 }
 
 body {
