--- a/src/components/NqmeProject/NqmeProject.css
+++ b/src/components/NqmeProject/NqmeProject.css
@@ -7,9 +7,9 @@ img {
     max-width: 100%;
 }
 
-h4 {
+.project-name {
     font-size: 1rem;
-    margin-block-end: 0.1rem;
+    margin-block-end: 0;
     color: var(--very-blue);
     font-weight: 100;
 }
@@ -18,14 +18,14 @@ h4 {
     font-size: 1.6rem;
     color: var(--almost-black);
     font-weight: 500;
-    margin-block-start: 0.01rem;
-    margin-block-end: 0.5rem;
+    margin-block-start: 0;
+    margin-block-end: 0;
 }
 
 .flex-header {
     display: flex;
     justify-content: space-between;
-    margin-block-end: 0.7rem;
+    margin-block-end: 1.4rem;
 }
 
 .icon-container {
@@ -77,7 +77,7 @@ a > svg {
 }
 
 .utilised-tools-margin {
-    margin-block-start: 1rem;
+    margin-block-start: 0.8rem;
 }
 
 .utilised-tools-text {
@@ -93,6 +93,7 @@ a > svg {
     border: 1px solid var(--very-blue);
     margin-inline-start: 0.1rem;
     margin-inline-end: 0.1rem;
+    margin-block-end: 2px;
 }
 
 .MuiChip-labelSmall {
