--- a/src/pages/app/App.css
+++ b/src/pages/app/App.css
@@ -174,6 +174,7 @@ b {
 .info-icon-date-container {
   display: flex;
   color: var(--very-blue);
+  width: 120px;
 }
 
 .info-icon-date-container:hover {
