--- a/src/pages/app/App.css
+++ b/src/pages/app/App.css
@@ -153,6 +153,17 @@ b {
   font-weight: 100;
 }
 
+.certificate-container {
+  display: flex;
+  justify-content: space-between;
+  margin-block-end: 21px;
+}
+
+.final-certificate-container {
+  display: flex;
+  justify-content: space-between;
+}
+
 .certificate-details {
   color: var(--dark-blue);
   font-size: 1.05rem;
@@ -219,4 +230,15 @@ li {
   font-weight: 600;
   margin-block-start: 0px;
   margin-block-end: 0px;
+}
+
+.social-media-container {
+  margin-block-start: 2rem;
+  display: flex;
+  justify-content: space-evenly;
+  color: var(--very-blue);
+}
+
+.social-media-container svg {
+  font-size: 2rem;
 }
