--- a/src/pages/app/App.css
+++ b/src/pages/app/App.css
@@ -231,14 +231,26 @@ li {
   margin-block-start: 0px;
   margin-block-end: 0px;
 }
+.center-text {
+  text-align: center;
+}
+
+.built-with-container {
+  font-size: 1.2rem;
+}
+
+.built-with-container svg {
+  color: var(--very-blue);
+}
 
 .social-media-container {
   margin-block-start: 2rem;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   color: var(--very-blue);
 }
 
 .social-media-container svg {
   font-size: 2rem;
+  margin: 0 25px;
 }
