--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 @import url("https://allfont.net/allfont.css?fonts=arcadeclassic"); */
 /* @import url("https://allfont.net/allfont.css?fonts=kongtext-regular"); */
 @font-face {
-  src: url(/kongtext.ttf);
+  src: url(kongtext.ttf);
   font-family: kongtext;
 }
 
