--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,18 @@
 /* @import url("https://allfont.net/allfont.css?fonts=joystix");
 @import url("https://allfont.net/allfont.css?fonts=digitek");
 @import url("https://allfont.net/allfont.css?fonts=arcadeclassic"); */
-@import url("https://allfont.net/allfont.css?fonts=kongtext-regular");
+/* @import url("https://allfont.net/allfont.css?fonts=kongtext-regular"); */
+
+/* @font-face {
+  src: url(/public/cozette_bitmap.ttf);
+  font-family: cozette;
+} */
 
 :root {
   --open-sans: "Open Sans", sans-serif;
   /* --dark-blue: #28518a; */
   /* --grayish: #414b58; */
-  --kongtext: 'Kongtext Regular', arial, sans-serif;
+  --cozette: "Open Sans", arial, sans-serif;
   /* --joystix: 'Joystix', arial, sans-serif; */
   --whiteish: #f9f7f7;
   --light-blue: #dbe2ef;
