--- a/src/pages/app/App.css
+++ b/src/pages/app/App.css
@@ -62,7 +62,7 @@
 
 .my-name {
   /* margin-left: 0.4rem; */
-  font-family: var(--kongtext);
+  font-family: var(--cozette);
   color: var(--dark-blue);
   font-size: 2.5rem;
   margin-block-start: 0.5rem;
